adicionei teste a bd

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,7 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+file.reference.mysql-connector-java-5.1.38-bin.jar=/Users/filipeoliveira/Documents/dss/dss_fase2/lib/mysql-connector-java-5.1.38-bin.jar
+javac.debug=true
+javadoc.preview=true
 user.properties.file=/Users/filipeoliveira/Library/Application Support/NetBeans/8.0.2/build.properties
